--- a/fetch/exercise2_fetch/index.html
+++ b/fetch/exercise2_fetch/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <input class ='input'type="text">
-  <button class ='btn'></button>
+  <button class ='btn'>NAME</button>
+  
   <script src="index.js"></script>
 </body>
 </html>
