--- a/fetch/exercise2_fetch/index.html
+++ b/fetch/exercise2_fetch/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <input class ='input'type="text">
+  <input class ='input' name ='inputValue'type="text">
   <button class ='btn'>NAME</button>
   
   <script src="index.js"></script>
