--- a/fetch/exercise2_fetch/index.html
+++ b/fetch/exercise2_fetch/index.html
@@ -9,7 +9,11 @@
 <body>
   <input class ='input' name ='inputValue'type="text">
   <button class ='btn'>NAME</button>
-  
+  <span>
+
+  </span>
+
+ 
   <script src="index.js"></script>
 </body>
 </html>
